--- a/style2.css
+++ b/style2.css
@@ -54,6 +54,10 @@ a:hover{
     padding-left: 100px;
     padding: 20px 20px;
 }
+.BotonesLogo a{
+    text-decoration: none;
+    color: black;
+}
 .Playa a{
     background-color: white;
     border: 2px solid black;
